objects/Batch_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Covering_Period_From__c</fullName>
        <inlineHelpText>This is the start date for the period that this batch payment covers.</inlineHelpText>
        <label>Covering Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Covering_Period_To__c</fullName>
        <inlineHelpText>This is the covering period to which invoices will be included.</inlineHelpText>
        <label>Covering Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Covering_Period_From__c</columns>
        <columns>Covering_Period_To__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Batch Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>